--- a/Raul/templates/Raul/home.html
+++ b/Raul/templates/Raul/home.html
@@ -19,10 +19,23 @@
 <header>
     <figure>
         <img src="{% static 'Raul/Images/raullogo.png' %}" alt="logo" width="6%">
-        <a href="#"><p> Home </p></a>
-        <a href="#"><p> Store </p></a>
-        <a href="{% url 'register' %}"><p> Contact </p></a>
-        <a href="#"> <p>Login </p></a>
+        {% if user.is_authenticated %}
+        <a href="{% url 'Raul-SecondHome' %}"><p> Home </p></a>
+        <a href="{% url 'Raul-product' %}"><p> Store </p></a>
+        <a href="{% url 'logout' %}"> <p>Logout </p></a>
+        <a href="{% url 'cart' %}"> <p>Cart </p></a>
+
+
+        {% else %}  
+        <a href="{% url 'Raul-SecondHome' %}"><p> Home </p></a>
+        <a href="{% url 'Raul-product' %}"><p> Store </p></a>
+        <a href="{% url 'register' %}"><p> Register </p></a>
+        <a href="{% url 'login' %}"> <p>Login </p></a>
+        <a href="{% url 'cart' %}"> <p>Cart </p></a>
+
+
+        {% endif %}
+
 
         <div class ="loginSlide" id="login">
             <div class="loginText">
@@ -49,8 +62,6 @@
                 <a>Forgot Password?</a>
             </div>
         </div>
-
-        <a href ="#"><p> Cart </p></a>
     </figure>
 
     <figcaption><img src="{% static 'Raul/Images/raullogo.png' %}" alt="logo" width="6%"></figcaption>
@@ -69,14 +80,15 @@
                 <a href="#">Store</a>
             </li>
             <li>
-                <a href="{% url 'register' %}">Contact</a>
+                <a href="{% url 'register' %}">Register</a>
             </li>
             <li>
                 <a href="{% url 'register' %}">Login</a>
             </li>
             <li>
-                <a href="#">Cart</a>
+                <a href="{% url 'cart' %}">Cart</a>
             </li>
+
 
 
         </ul>
@@ -98,7 +110,7 @@
                 </div>
                     <span>FURNITURE</span>
                 <div class = "linksShop">
-                    <a href="#FlowerSec">FLORAL</a> | <a href="#TableSec">TABLE TOP</a> | <a href="#FurnitureSec">FURNITURE</a> | <a href="#WallSec">WALL ART</a> | <a href ="#DecorativeSec">DECORATIVE ACCESSORIES</a> |                
+                    | <a href="#FlowerSec">FLORAL</a> | <a href="#TableSec">TABLE TOP</a> | <a href="#LightingSec">LIGHTING</a> | <a href="#WallSec">WALL ART</a> | <a href ="#DecorativeSec">DECORATIVE ACCESSORIES</a> |                
                 </div>
             </div>
 
@@ -193,7 +205,7 @@
                 <div class="shopNow">
                     SHOP NOW
                 </div>
-                    <span>WALLART</span>
+                    WALLART
                 <div class = "linksShop">
                     | <a href="#FlowerSec">FLORAL</a> | <a href="#TableSec">TABLE TOP</a> | <a href="#LightingSec">LIGHTING</a> | <a href="#FurnitureSec">FURNITURE</a> | <a href ="#DecorativeSec">DECORATIVE ACCESSORIES</a> |
                 </div>
@@ -217,9 +229,9 @@
                 <div class="shopNow">
                     SHOP NOW
                 </div>
-                    <span>DECORATIVE</span>
+                    <span>DECORATIVE ACCESSORIES</span>
                 <div class = "linksShop">
-                    | <a href="#">FLORAL</a> | <a href="#">TABLE TOP</a> | <a href="#">LIGHTING</a> | <a href="#">WALL ART</a> | <a href ="#">DECORATIVE ACCESSORIES</a> |
+                    | <a href="#">FLORAL</a> | <a href="#">TABLE TOP</a> | <a href="#">LIGHTING</a> | <a href="#">WALL ART</a> | <a href ="#">FURNITURE</a> |
                 </div>
             </div>
 
@@ -233,6 +245,10 @@
                 <img src="{% static 'Raul/Images/6.jpg' %}"  draggable="false" alt="Furniture Photo" class="staticImage">
             </div>
         </div>
+    </div>
+
+    <div class="contact" id="Contact">
+        
     </div>
 
 <footer>
