--- a/Raul/templates/Raul/home.html
+++ b/Raul/templates/Raul/home.html
@@ -234,9 +234,9 @@
                 <div class="shopNow">
                     SHOP NOW
                 </div>
-                    <span>DECORATIVE</span>
+                    <span>DECORATIVE ACCESSORIES</span>
                 <div class = "linksShop">
-                    | <a href="#">FLORAL</a> | <a href="#">TABLE TOP</a> | <a href="#">LIGHTING</a> | <a href="#">WALL ART</a> | <a href ="#">DECORATIVE ACCESSORIES</a> |
+                    | <a href="#FlowerSec">FLORAL</a> | <a href="#TableSec">TABLE TOP</a> | <a href="#LightingSec">LIGHTING</a> | <a href="#WallSec">WALL ART</a> | <a href ="#FurnitureSec">FURNITURE</a> |
                 </div>
             </div>
 
