--- a/Raul/templates/Raul/home.html
+++ b/Raul/templates/Raul/home.html
@@ -216,6 +216,31 @@
                 </div>
             </div>
 
+            <div class ="furnitureImages">
+                <img src="{% static 'Raul/Images/2.jpg' %}"  draggable="false" alt="Furniture Photo" class="staticImage">
+                <div class="textMiddle">
+                    <div class="textInfo">
+                        SHOP.
+                    </div>
+                </div>
+                <img src="{% static 'Raul/Images/11.jpg' %}"  draggable="false" alt="Furniture Photo" class="staticImage">
+            </div>
+        </div>
+    </div>
+
+    
+    <div class="furniture" id ="DecorativeSec">
+        <div class="shopBack" id="decorative">
+            <div class="furnitureHeading">
+                <div class="shopNow">
+                    SHOP NOW
+                </div>
+                    <span> DECORATIVE ACCESSORIES</span>
+                <div class = "linksShop">
+                    | <a href="#FlowerSec">FLORAL</a> | <a href="#TableSec">TABLE TOP</a> | <a href="#LightingSec">LIGHTING</a> | <a href="#FurnitureSec">FURNITURE</a> | <a href ="#WallSec">WALL ART</a> |
+                </div>
+            </div>
+
             <div class ="furnitureImages" id ="DecorativeSec">
                 <img src="{% static 'Raul/Images/2.jpg' %}"  draggable="false" alt="Furniture Photo" class="staticImage">
                 <div class="textMiddle">
@@ -228,29 +253,6 @@
         </div>
     </div>
 
-    <div class="furniture" id ="DecorativeSec">
-        <div class="shopBack" id="decorative">
-            <div class="furnitureHeading">                
-                <div class="shopNow">
-                    SHOP NOW
-                </div>
-                    <span>DECORATIVE ACCESSORIES</span>
-                <div class = "linksShop">
-                    | <a href="#FlowerSec">FLORAL</a> | <a href="#TableSec">TABLE TOP</a> | <a href="#LightingSec">LIGHTING</a> | <a href="#WallSec">WALL ART</a> | <a href ="#FurnitureSec">FURNITURE</a> |
-                </div>
-            </div>
-
-            <div class ="furnitureImages">
-                <img src="{% static 'Raul/Images/5.jpg' %}"  draggable="false" alt="Furniture Photo" class="staticImage">
-                <div class="textMiddle">
-                    <div class="textInfo">
-                        SHOP.
-                    </div>
-                </div>
-                <img src="{% static 'Raul/Images/6.jpg' %}"  draggable="false" alt="Furniture Photo" class="staticImage">
-            </div>
-        </div>
-    </div>
 
 <footer>
 
