--- a/Raul/static/Raul/main.css
+++ b/Raul/static/Raul/main.css
@@ -5,9 +5,9 @@ html,body{
     font-family: 'Roboto', sans-serif;
     overflow-x: hidden;
     scroll-behavior: smooth;
-    /*scroll-snap-type: mandatory;
+    scroll-snap-type: mandatory;
     scroll-snap-points-y: repeat(100vh);
-    scroll-snap-type: y mandatory; */
+    scroll-snap-type: y mandatory;
 }
 
 a{
@@ -54,6 +54,13 @@ figure img{
     background-position: center;
     background-attachment: fixed;
     color:#501B1D;
+}
+
+#videoBG{
+    z-index:-1;
+    opacity:0.9;
+    width:100%;
+    filter:brightness(60%);
 }
 
 .bannerHeading figcaption{
@@ -550,10 +557,14 @@ nav ul li a:hover{
         display: none;
     }
 
+    header{
+        background:white; /*Change to transparent*/
+    }
+
     figure{
         margin: 0px;
         display: grid;
-        grid-template-columns: auto auto auto auto auto auto;
+        grid-template-columns: auto auto auto auto auto auto auto auto;
         height: 4em;
     }
 
@@ -696,12 +707,159 @@ nav ul li a:hover{
     }
 
     .furniture{
-        display: none;
+        height:100vh;
+        width:100%;
+        background-color: white;
+        scroll-snap-align: start;
     }
 
-    #videoBG{
-        display: none;
+    .shopBack{
+        display: flex;
+        flex-wrap: nowrap;
+        margin:40px;
+        background-color: indianred;
+        width:95vw;
+        height:95vh;
     }
+
+    .furnitureHeading{
+        font-size:9em;
+        font-family: 'Roboto Condensed';
+        margin:20% .5em;
+        color: white;
+        opacity: 1;
+    }
+
+    .linksShop{
+        font-size:0.1em;
+        font-family:'Roboto';
+        font-weight: 700;
+        letter-spacing: 0.18em;
+        text-align: center;
+        color: whitesmoke;
+        font-family: 'Roboto Condensed';
+    }
+
+    .linksShop a{
+        text-decoration: none;
+        color:whitesmoke;
+    }
+
+    .linksShop a:hover{
+        color: black;
+        font-family: 'Roboto Condensed';
+    }
+
+    .shopNow {
+        font-size:0.2em;
+        font-family:'Roboto';
+        letter-spacing: 2.2em;
+        font-weight: 700;
+        text-align: center;
+    }
+
+    .furnitureImages{
+        display: grid;
+        grid-template-columns: auto auto;
+        margin:7% 0.5em;
+    }
+
+    .furnitureImages img{
+        padding:20px;
+        transition: 0.4s ease-in-out;
+        display: block;
+    }
+
+    .furnitureImages:hover .staticImage {
+        filter: grayscale(40%) blur(1px);
+    }
+    
+    .textMiddle{
+        transition: 0.3s ease-in-out;
+        opacity: 0;
+        position: absolute;
+        top:50%;
+        right:10%;
+        text-align: center; 
+        z-index: 1;
+    }
+
+    .textInfo{
+        width:80%;
+        padding: 16px 32px 16px 32px;
+        font-size: 5em;
+        font-family: 'Roboto Condensed';
+        background-color: white;
+        color:black;  
+        
+    }
+
+    .furnitureImages:hover .textMiddle{
+        opacity: 1;
+        cursor: pointer;
+        box-shadow: 0px 0px 10px 1px black;
+    }
+
+    #Lighting{
+        letter-spacing: 0.1em;
+        color:black
+    }
+
+    #lighting .furnitureHeading .linksShop a{
+        color:black;
+    }
+
+    #lighting .furnitureHeading .linksShop a:hover{
+        color:darkred;
+    }
+
+    #lighting .furnitureHeading .linksShop{
+        color:black;
+    }
+
+    #lighting .shopNow{
+        color:black;
+    }
+
+    #lighting{
+        background-color: #ffccbc;
+    }
+
+    #Floral{
+        letter-spacing: 0.25em;
+    }
+
+    #flower{
+        background-color: #C96567;
+    }   
+
+    #table{
+        background-color: #86C232;
+    }
+
+    #table .shopNow{
+        letter-spacing: 2em;
+    }
+
+    #table .furnitureHeading span{
+        letter-spacing: 0.04em;
+    }
+
+    #wall .furnitureHeading{
+        letter-spacing: 0.1em;
+    }
+
+    #decorative .furnitureHeading{
+        margin:15% 0.4em;
+        font-size: 8em;
+    }
+
+    .contact{
+        height: 100vh;
+        width:100%;
+        background-color: white;
+    }
+
 }
 
 @media only screen and (min-width:1200px) and (max-width: 1600px){
@@ -748,13 +906,6 @@ nav ul li a:hover{
         scroll-snap-align: start;
     }
 
-    #videoBG{
-        z-index:-1;
-        opacity:0.9;
-        width:100%;
-        filter:brightness(60%);
-    }
-
     .bannerHeading figcaption{
         font-size: 3.5em;
         background-color: transparent;
@@ -773,6 +924,7 @@ nav ul li a:hover{
         height:100vh;
         width:100%;
         background-color: white;
+        scroll-snap-align: start;
     }
 
     .shopBack{
