--- a/Raul/templates/Raul/home.html
+++ b/Raul/templates/Raul/home.html
@@ -140,7 +140,7 @@
                 </div>
                     <span id="Lighting">LIGHTING</span>
                 <div class = "linksShop">
-                    | <a href="#FlowerSec">FLORAL</a> | <a href="#TableSec">TABLE TOP</a> | <a href="#FurnitureSec">FURNITURE</a> | <a href="#WallSec">WALL ART</a> | <a href ="#DecorativeSec">DECORATIVE ACCESSORIES</a> |
+                    | <a href="">FLORAL</a> | <a href="#">TABLE TOP</a> | <a href="#">FURNITURE</a> | <a href="#">WALL ART</a> | <a href ="#">DECORATIVE ACCESSORIES</a> |
                 </div>
             </div>
 
@@ -164,7 +164,7 @@
                 </div>
                     <span id= "Floral">FLORAL</span>
                 <div class = "linksShop">
-                    | <a href="#LightingSec">LIGHTING</a> | <a href="#TableSec">TABLE TOP</a> | <a href="#FurnitureSec">FURNITURE</a> | <a href="#WallSec">WALL ART</a> | <a href ="#DecorativeSec">DECORATIVE ACCESSORIES</a> |
+                    | <a href="#">LIGHTING</a> | <a href="#">TABLE TOP</a> | <a href="#">FURNITURE</a> | <a href="#">WALL ART</a> | <a href ="#">DECORATIVE ACCESSORIES</a> |
                 </div>
             </div>
 
@@ -188,7 +188,7 @@
                 </div>
                 <span>TABLETOP</span>
                 <div class = "linksShop">
-                    | <a href="#FlowerSec">FLORAL</a> | <a href="#FurnitureSec">FURNITURE</a> | <a href="#LightingSec">LIGHTING</a> | <a href="#WallSec">WALL ART</a> | <a href ="#DecorativeSec">DECORATIVE ACCESSORIES</a> |
+                    | <a href="#">FLORAL</a> | <a href="#">FURNITURE</a> | <a href="#">LIGHTING</a> | <a href="#">WALL ART</a> | <a href ="#">DECORATIVE ACCESSORIES</a> |
                 </div>
             </div>
 
@@ -212,7 +212,7 @@
                 </div>
                     <span>WALLART</span>
                 <div class = "linksShop">
-                    | <a href="#FlowerSec">FLORAL</a> | <a href="#TableSec">TABLE TOP</a> | <a href="#LightingSec">LIGHTING</a> | <a href="#FurnitureSec">FURNITURE</a> | <a href ="#DecorativeSec">DECORATIVE ACCESSORIES</a> |
+                    | <a href="#">FLORAL</a> | <a href="#">TABLE TOP</a> | <a href="#">LIGHTING</a> | <a href="#">FURNITURE</a> | <a href ="#">DECORATIVE ACCESSORIES</a> |
                 </div>
             </div>
 
