--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -1,6 +1,10 @@
 {% extends "Raul/base.html" %}
 {% block content %}
 {% load crispy_forms_tags %}
- <h1>{{user.username}}</h1>
+    <h1>{{user.username}}</h1>
+    <h1>{{user.email}}</h1>
+    {% for user in userorders %}
+        {{ user.product }}
+    {% endfor %}
 {% endblock %}
 
