new home page set3

--- a/Raul/templates/Raul/single_product.html
+++ b/Raul/templates/Raul/single_product.html
@@ -6,6 +6,7 @@
             {{single_product.image}}
             {{ single_product.title }}
             {{ single_product.price }}
+            {{single_product.description}}
 
         </div>
     </div>
