--- a/Raul/templates/Raul/home.html
+++ b/Raul/templates/Raul/home.html
@@ -127,7 +127,7 @@
                     </div>
                 </div>
 
-                <img src="{% static 'Raul/Images/6.jpg' %}" draggable="false" alt="Furniture Photo" class="staticImage">
+                <img src="{% static 'Raul/Images/6.jpg' %}" draggable="false" alt="Furniture Photo" class="staticImage" id="hide">
             </div>
         </div>
     </div>
@@ -151,7 +151,7 @@
                         SHOP.
                     </div>
                 </div>
-                <img src="{% static 'Raul/Images/7.jpg' %}"  draggable="false" alt="Furniture Photo" class="staticImage">
+                <img src="{% static 'Raul/Images/7.jpg' %}"  draggable="false" alt="Furniture Photo" class="staticImage" id="hide">
             </div>
         </div>
     </div>
@@ -175,7 +175,7 @@
                         SHOP.
                     </div>
                 </div>
-                <img src="{% static 'Raul/Images/8.jpg' %}"  draggable="false" alt="Furniture Photo" class="staticImage">
+                <img src="{% static 'Raul/Images/8.jpg' %}"  draggable="false" alt="Furniture Photo" class="staticImage" id="hide">
             </div>
         </div>
     </div>
@@ -199,7 +199,7 @@
                         SHOP.
                     </div>
                 </div>
-                <img src="{% static 'Raul/Images/10.jpg' %}"  draggable="false" alt="Furniture Photo" class="staticImage">
+                <img src="{% static 'Raul/Images/10.jpg' %}"  draggable="false" alt="Furniture Photo" class="staticImage" id="hide">
             </div>
         </div>
     </div>
@@ -223,7 +223,7 @@
                         SHOP.
                     </div>
                 </div>
-                <img src="{% static 'Raul/Images/11.jpg' %}"  draggable="false" alt="Furniture Photo" class="staticImage">
+                <img src="{% static 'Raul/Images/11.jpg' %}"  draggable="false" alt="Furniture Photo" class="staticImage" id="hide">
             </div>
         </div>
     </div>
@@ -235,21 +235,21 @@
                 <div class="shopNow">
                     SHOP NOW
                 </div>
-                    <span> DECORATIVE ACCESSORIES</span>
+                <span id="head">  DECORATIVE ACCESSORIES</span>
                 <div class = "linksShop">
                     | <a href="#FlowerSec">FLORAL</a> | <a href="#TableSec">TABLE TOP</a> | <a href="#LightingSec">LIGHTING</a> | <a href="#FurnitureSec">FURNITURE</a> | <a href ="#WallSec">WALL ART</a> |
                 </div>
             </div>
-
-            <div class ="furnitureImages" id ="DecorativeSec">
+            <div class ="furnitureImages">
                 <img src="{% static 'Raul/Images/2.jpg' %}"  draggable="false" alt="Furniture Photo" class="staticImage">
                 <div class="textMiddle">
                     <div class="textInfo">
                         SHOP.
                     </div>
                 </div>
-                <img src="{% static 'Raul/Images/11.jpg' %}"  draggable="false" alt="Furniture Photo" class="staticImage">
+                <img src="{% static 'Raul/Images/11.jpg' %}"  draggable="false" alt="Furniture Photo" class="staticImage" id="hide">
             </div>
+
         </div>
     </div>
     <div class="contact">
