--- a/Raul/static/Raul/main.css
+++ b/Raul/static/Raul/main.css
@@ -452,31 +452,180 @@ nav ul li a:hover{
 
     .bannerHead{    
         height: 100vh;
+        width:100vw;
+        overflow: hidden;
+        position: relative;
+        scroll-snap-align: start;
     }
 
-    .bannerHeading{
-        padding-top: 12em;
-        padding-left: 5em;
-        
+    .bannerHead video {
+        display: none;
     }
 
     .bannerHeading figcaption{
-        font-size: 8em;
-        padding: 20px;
-        width:35%;
+        font-size: 2.5em;
+        background-color: transparent;
+        width:100%;
+        height:auto;
+        position: absolute;
+        top:50%;
+        left:0;
+        text-align: center;
+        color:white;
+        font-family:'Roboto';
+        font-weight:700;
+    }
+
+    
+    .furniture{
+        height:900px;
+        width:100%;
+        background-color: white;
+        scroll-snap-align: start;
+        padding:10px;
+    }
+
+    .shopBack{
+        display: flex;
+        flex-wrap: wrap-reverse;
+        flex-direction: row;
+        /* margin:50px; */
+        background-color: indianred;
+        width:95vw;
+        height:95vh;
+    }
+
+    .furnitureHeading{
+        font-size:6em;
+        font-family: 'Roboto Condensed';
+        /* margin:30% .5em; */
+        color: white;
+        opacity: 1;
+    }
+
+    .linksShop{
+        font-size:0.1em;
+        font-family:'Roboto';
+        font-weight: 700;
+        letter-spacing: 0.18em;
+        text-align: center;
+        color: whitesmoke;
+        font-family: 'Roboto Condensed';
+    }
+
+    .linksShop a{
+        text-decoration: none;
+        color:whitesmoke;
+    }
+
+    .linksShop a:hover{
+        color: black;
+        font-family: 'Roboto Condensed';
+    }
+
+    .shopNow {
+        font-size:0.2em;
+        font-family:'Roboto';
+        letter-spacing: 2.2em;
+        font-weight: 700;
         text-align: center;
     }
+/* 
+    .furnitureImages{
+        margin:10% 0.5em;
+    } */
 
-    .shopImage{
+    #hide{
         display: none;
     }
 
-    .furniture{
-        display: none;
+    .furnitureImages img{
+        transition: 0.4s ease-in-out;
+        display: block;
     }
 
-    #videoBG{
+    .staticImage{
+        width:40%;
+    }
+    
+    .textMiddle{
+        transition: 0.3s ease-in-out;
+        opacity: 0;
+        position: absolute;
+        top:50%;
+        right:10%;
+        text-align: center; 
+        z-index: 1;
+    }
+
+    .textInfo{
+        width:80%;
+        padding: 16px 32px 16px 32px;
+        font-size: 5em;
+        font-family: 'Roboto Condensed';
+        background-color: white;
+        color:black;  
         display: none;
+        
+    }
+
+    #Lighting{
+        letter-spacing: 0.1em;
+        color:black
+    }
+
+    #lighting .furnitureHeading .linksShop a{
+        color:black;
+    }
+
+    #lighting .furnitureHeading .linksShop a:hover{
+        color:darkred;
+    }
+
+    #lighting .furnitureHeading .linksShop{
+        color:black;
+    }
+
+    #lighting .shopNow{
+        color:black;
+    }
+
+    #lighting{
+        background-color: #ffccbc;
+    }
+
+    #Floral{
+        letter-spacing: 0.25em;
+    }
+
+    #flower{
+        background-color: #C96567;
+    }   
+
+    #table{
+        background-color: #86C232;
+    }
+
+    #table .shopNow{
+        letter-spacing: 2em;
+    }
+
+    #table .furnitureHeading span{
+        letter-spacing: 0.04em;
+    }
+
+    #wall .furnitureHeading{
+        letter-spacing: 0.1em;
+    }
+
+    #decorative .furnitureHeading{
+        margin:20% 0.5em;
+    }
+
+    .contact{
+        height: 100vh;
+        width:100%;
+        background-color: white;
     }
 }
 
@@ -519,32 +668,179 @@ nav ul li a:hover{
 
     .bannerHead{    
         height: 100vh;
+        width:100vw;
+        overflow: hidden;
+        position: relative;
+        scroll-snap-align: start;
     }
 
-    #videoBG{
+    .bannerHead video {
         display: none;
-    }
-
-    .bannerHeading{
-        padding-top: 12em;
-        padding-left: 4em;
-        
     }
 
     .bannerHeading figcaption{
-        font-size: 7em;
-        padding: 20px;
-        width:25%;
+        font-size: 3em;
+        background-color: transparent;
+        width:100%;
+        height:auto;
+        position: absolute;
+        top:50%;
+        left:0;
         text-align: center;
-    }
-
-    .shopImage{
-        display: none;
+        color:white;
+        font-family:'Roboto';
+        font-weight:700;
     }
 
     .furniture{
+        height:700px;
+        width:100%;
+        background-color: white;
+        scroll-snap-align: start;
+        padding:10px;
+    }
+
+    .shopBack{
+        display: flex;
+        flex-wrap: nowrap;
+        margin:50px;
+        background-color: indianred;
+        width:95vw;
+        height:95vh;
+    }
+
+    .furnitureHeading{
+        font-size:6em;
+        font-family: 'Roboto Condensed';
+        margin:30% .5em;
+        color: white;
+        opacity: 1;
+    }
+
+    .linksShop{
+        font-size:0.1em;
+        font-family:'Roboto';
+        font-weight: 700;
+        letter-spacing: 0.18em;
+        text-align: center;
+        color: whitesmoke;
+        font-family: 'Roboto Condensed';
+    }
+
+    .linksShop a{
+        text-decoration: none;
+        color:whitesmoke;
+    }
+
+    .linksShop a:hover{
+        color: black;
+        font-family: 'Roboto Condensed';
+    }
+
+    .shopNow {
+        font-size:0.2em;
+        font-family:'Roboto';
+        letter-spacing: 2.2em;
+        font-weight: 700;
+        text-align: center;
+    }
+
+    .furnitureImages{
+        margin:10% 0.5em;
+    }
+
+    #hide{
         display: none;
     }
+
+    .furnitureImages img{
+        transition: 0.4s ease-in-out;
+        display: block;
+    }
+
+    .staticImage{
+        width:90%;
+    }
+    
+    .textMiddle{
+        transition: 0.3s ease-in-out;
+        opacity: 0;
+        position: absolute;
+        top:50%;
+        right:10%;
+        text-align: center; 
+        z-index: 1;
+    }
+
+    .textInfo{
+        width:80%;
+        padding: 16px 32px 16px 32px;
+        font-size: 5em;
+        font-family: 'Roboto Condensed';
+        background-color: white;
+        color:black;  
+        
+    }
+
+    #Lighting{
+        letter-spacing: 0.1em;
+        color:black
+    }
+
+    #lighting .furnitureHeading .linksShop a{
+        color:black;
+    }
+
+    #lighting .furnitureHeading .linksShop a:hover{
+        color:darkred;
+    }
+
+    #lighting .furnitureHeading .linksShop{
+        color:black;
+    }
+
+    #lighting .shopNow{
+        color:black;
+    }
+
+    #lighting{
+        background-color: #ffccbc;
+    }
+
+    #Floral{
+        letter-spacing: 0.25em;
+    }
+
+    #flower{
+        background-color: #C96567;
+    }   
+
+    #table{
+        background-color: #86C232;
+    }
+
+    #table .shopNow{
+        letter-spacing: 2em;
+    }
+
+    #table .furnitureHeading span{
+        letter-spacing: 0.04em;
+    }
+
+    #wall .furnitureHeading{
+        letter-spacing: 0.1em;
+    }
+
+    #decorative .furnitureHeading{
+        margin:20% 0.5em;
+    }
+
+    .contact{
+        height: 100vh;
+        width:100%;
+        background-color: white;
+    }
+
 }
 
 @media only screen and (min-width:1025px) and (max-width:1200px){
@@ -596,7 +892,7 @@ nav ul li a:hover{
     }
 
     .bannerHeading figcaption{
-        font-size: 3em;
+        font-size: 4em;
         background-color: transparent;
         width:100%;
         height:auto;
@@ -698,11 +994,11 @@ nav ul li a:hover{
         
     }
 
-    .furnitureImages:hover .textMiddle{
+    /* .furnitureImages:hover .textMiddle{
         opacity: 1;
         cursor: pointer;
         box-shadow: 0px 0px 10px 1px black;
-    }
+    } */
 
     #Lighting{
         letter-spacing: 0.1em;
@@ -753,9 +1049,8 @@ nav ul li a:hover{
         letter-spacing: 0.1em;
     }
 
-    #decorative .furnitureHeading{
-        margin:15% 0.4em;
-        font-size: 8em;
+    .furnitureHeading #head{
+        font-size:0.8em;
     }
 
     .contact{
@@ -766,7 +1061,7 @@ nav ul li a:hover{
 
 }
 
-@media only screen and (min-width:1200px) and (max-width: 1600px){
+@media only screen and (min-width:1200px) /*Dimensions higher than 1200px*/{
 
     nav{
         display: none;
