--- a/Raul/static/Raul/main.css
+++ b/Raul/static/Raul/main.css
@@ -553,11 +553,11 @@ nav ul li a:hover{
     }
 
     #flower{
-        background-color: #C96567;
+        background-color: grey;
     }   
 
     #table{
-        background-color: #86C232;
+        background-color: white;
     }
 
     #table .shopNow{
