--- a/Raul/templates/Raul/home.html
+++ b/Raul/templates/Raul/home.html
@@ -103,9 +103,9 @@
     
 </header>
     <div class ="bannerHead" id = "mainBanner">
-        <video src="{% static 'Raul/Images/bgFinal.mp4' %}" autoplay loop muted id = "videoBG"></video>
+        <video src="{% static 'Raul/Images/Merch Video V 5.m4v' %}" autoplay loop muted id = "videoBG"></video>
         <div class = "bannerHeading">
-            <figcaption> The perfect arrangment for you. </figcaption>
+            <figcaption> r a ù l </figcaption>
         </div>
         
     </div>
