--- a/Raul/static/Raul/main.css
+++ b/Raul/static/Raul/main.css
@@ -4,10 +4,11 @@ html,body{
     height:100%;
     font-family: 'Roboto', sans-serif;
     overflow-x: hidden;
+    background-color: #595959;
     scroll-behavior: smooth;
     scroll-snap-type: mandatory;
     scroll-snap-points-y: repeat(100vh);
-    scroll-snap-type: y mandatory;
+    scroll-snap-type: y mandatory; */
 }
 
 a{
@@ -1244,7 +1245,7 @@ nav ul li a:hover{
     }
 
     header{
-        background:white; /*Change to transparent*/
+        background:#595959; /*Change to transparent*/
     }
 
     figure{
@@ -1271,7 +1272,7 @@ nav ul li a:hover{
     .bannerHead{    
         height: 100vh;
         width:100vw;
-        background:transparent;
+        background:#595959;
         overflow: hidden;
         position: relative;
         scroll-snap-align: start;
@@ -1294,7 +1295,7 @@ nav ul li a:hover{
     .furniture{
         height:100vh;
         width:100%;
-        background-color: white;
+        background-color: #595959;
         scroll-snap-align: start;
     }
 
@@ -1302,7 +1303,7 @@ nav ul li a:hover{
         display: flex;
         flex-wrap: nowrap;
         margin:40px;
-        background-color: indianred;
+        background-color: rgba(0,0,0,0.5);
         width:95vw;
         height:95vh;
     }
@@ -1311,7 +1312,7 @@ nav ul li a:hover{
         font-size:9em;
         font-family: 'Roboto Condensed';
         margin:20% .5em;
-        color: white;
+        color: #cfbb63;
         opacity: 1;
     }
 
@@ -1321,17 +1322,17 @@ nav ul li a:hover{
         font-weight: 700;
         letter-spacing: 0.18em;
         text-align: center;
-        color: whitesmoke;
+        color: #cfbb63;
         font-family: 'Roboto Condensed';
     }
 
     .linksShop a{
         text-decoration: none;
-        color:whitesmoke;
+        color:#cfbb63;
     }
 
     .linksShop a:hover{
-        color: black;
+        color:orange;
         font-family: 'Roboto Condensed';
     }
 
@@ -1387,39 +1388,10 @@ nav ul li a:hover{
 
     #Lighting{
         letter-spacing: 0.1em;
-        color:black
-    }
-
-    #lighting .furnitureHeading .linksShop a{
-        color:black;
-    }
-
-    #lighting .furnitureHeading .linksShop a:hover{
-        color:darkred;
-    }
-
-    #lighting .furnitureHeading .linksShop{
-        color:black;
-    }
-
-    #lighting .shopNow{
-        color:black;
-    }
-
-    #lighting{
-        background-color: #ffccbc;
     }
 
     #Floral{
         letter-spacing: 0.25em;
-    }
-
-    #flower{
-        background-color: #C96567;
-    }   
-
-    #table{
-        background-color: #86C232;
     }
 
     #table .shopNow{
