--- a/Raul/static/Raul/main.css
+++ b/Raul/static/Raul/main.css
@@ -8,7 +8,7 @@ html,body{
     scroll-behavior: smooth;
     scroll-snap-type: mandatory;
     scroll-snap-points-y: repeat(100vh);
-    scroll-snap-type: y mandatory; */
+    scroll-snap-type: y mandatory;
 }
 
 a{
