--- a/Raul/templates/Raul/home.html
+++ b/Raul/templates/Raul/home.html
@@ -22,7 +22,6 @@
         {% if user.is_authenticated %}
         <a href="{% url 'Raul-SecondHome' %}"><p> Home </p></a>
         <a href="{% url 'Raul-product' %}"><p> Store </p></a>
-<!--        <a href="{% url 'register' %}"><p> Register </p></a>-->
         <a href="{% url 'logout' %}"> <p>Logout </p></a>
         <a href="{% url 'cart' %}"> <p>Cart </p></a>
         <a href="{% url 'profile' %}"> <p>Profile</p></a>
@@ -65,10 +64,6 @@
                 <a>Forgot Password?</a>
             </div>
         </div>
-
-<!--
-        <a href ="#"><p> Cart </p></a>
--->
     </figure>
 
     <figcaption><img src="{% static 'Raul/Images/raullogo.png' %}" alt="logo" width="6%" id="logo"></figcaption>
@@ -282,9 +277,9 @@
 
     function scrollFunction() {
         if (document.body.scrollTop > 80 || document.documentElement.scrollTop > 80) {
-            document.getElementById("logo").style.backgroundColor = "white";
+            document.getElementById("headers").style.background = "white";
         } else {
-            document.getElementById("logo").style.backgroundColor = "black";
+            document.getElementById("headers").style.background = "black";
         }
     }
 
