--- a/Raul/templates/Raul/cart.html
+++ b/Raul/templates/Raul/cart.html
@@ -1,5 +1,4 @@
 
-
 {% load static %}
 <!DOCTYPE html>
 <html>
@@ -34,7 +33,8 @@
                                             <div class="row">
                                                 <div class="col-md-5 product-name">
                                                     <div class="product-name">
-                                                        <a href="#">{{item.product}}</a>
+
+                                                        <a href="{% url 'Raul-single' item.product.slug %}">{{item.product}}</a>
                                                         <div class="product-info">
                                                             <div>Display: <span class="value">studded vase ${{item.product.price}}
 																	Metal Vase Bronze 5 H x 5 W</span></div>
@@ -42,9 +42,13 @@
                                                     </div>
                                                 </div>
                                                 <div class="col-md-4 quantity">
-                                                    <label for="quantity">Quantity: {{item.quantity}}</label>
-                                                    <input id="quantity" type="number" value ="{{item.quantity}}" class="form-control quantity-input">
+                                                    <form class= 'form pull-right' method='GET' action="{% url 'update_cart' item.product.slug %}">
+                                                        <input name='qty' type='number' placeholder={{item.quantity}} value='{{item.quantity}}' />
+                                                        <input type='submit' value='update cart' />
+                                                    </form>
+
                                                 </div>
+
                                                 <div class="col-md-3 price">
                                                     <span>${{item.line_total}}</span>
                                                 </div>
