--- a/Raul/templates/Raul/home.html
+++ b/Raul/templates/Raul/home.html
@@ -135,7 +135,7 @@
     <div class ="bannerHead" id = "mainBanner">
         <video src="{% static 'Raul/Images/Merch Video V 5.m4v' %}" autoplay loop muted id = "videoBG"></video>
         <div class = "bannerHeading">
-            <figcaption> r a ù l  <br> <a href="#shop"><button>shop to make the perfect arrangements</button></a></figcaption>
+            <figcaption> r a ù l  <br> <a href="#shop"><button>a click away from perfect arrangements</button></a></figcaption>
         </div>
     </div>
 
