--- a/Raul/static/Raul/main.css
+++ b/Raul/static/Raul/main.css
@@ -79,7 +79,7 @@ figure img{
 }
 
 .bannerHeading figcaption{
-    font-family: 'Roboto', serif; /*Change the font*/
+    font-family: 'Roboto', serif; 
     background-color: white;
 }
 
